Makefile: fix broken dist
Signed-off-by: Aleksa Sarai <asarai@suse.de>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,13 +17,16 @@
 # remainroot
 bin_PROGRAMS = remainroot
 remainroot_SOURCES = remainroot.c core/cred.c
+noinst_HEADERS = common.h config-wrap.h info.h shims.h core/cred.h core/syscalls-def.h core/syscalls-undef.h
 remainroot_SOURCES += ptrace.c ptrace/generic-shims.c ptrace/amd64.c ohmic/ohmic.c
-remainroot_SOURCES += preload.c libremain.so.c
+remainroot_SOURCES += preload.c libremain/symbols.c libremain.so.c
+noinst_HEADERS += ptrace/generic.h ptrace/generic-shims.h ohmic/ohmic.h
 
 # I'm so sorry.
 libremain.so.c: $(srcdir)/libremain/symbols.c $(srcdir)/core/cred.c
 	$(CC) -I$(srcdir)/ -shared -fPIC $< -o $(tmpdir)/libremain.so
 	cd $(tmpdir) && $(XXD) -i libremain.so > $(abs_srcdir)/libremain.so.c
+	rm -rf $(tmpdir)/*
 #endif
 
 clean-local:
