--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,7 +17,7 @@
 # remainroot
 bin_PROGRAMS = remainroot
 remainroot_SOURCES = remainroot.c core/cred.c
-noinst_HEADERS = common.h config-wrap.h info.h shims.h core/cred.h core/syscalls-def.h core/syscalls-undef.h
+noinst_HEADERS = common.h info.h shims.h core/cred.h core/syscalls-def.h core/syscalls-undef.h
 remainroot_SOURCES += ptrace.c ptrace/generic-shims.c ptrace/amd64.c ohmic/ohmic.c
 remainroot_SOURCES += preload.c libremain/symbols.c libremain.so.c
 noinst_HEADERS += ptrace/generic.h ptrace/generic-shims.h ohmic/ohmic.h
